--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#" class="logo">Sazzy Sizler</a>
+        <a href="#" class="logo">Sazzy Sizzlers</a>
         <div class="bx bx-menu" id="menu-icon"></div>
  
         <ul class="navbar">
