--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Home  Section-->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Sizzler</h1>
+            <h1>Sizzlers</h1>
             <h2>The tasty sizzler of <br> your choice</h2>
             <a href="#" class="btn">View Menu</a>
         </div>
